SOFTWARE_FACTORY/infra-gitops/apps/kaanbal-console/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaanbal-console
  labels:
    app: kaanbal-console
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: kaanbal-console
